@@ -1,3 +1,6 @@
+2004-03-09	blytkerchan
+	* decrement.c: new file
+
 2003-10-18	blytkerchan
 	* compare_and_exchange.c: moved from ../i486/main.c
 
